[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Scripts/Routes.gd" type="Script" id=1]
[ext_resource path="res://Assets/breakfastVariations.png" type="Texture" id=3]
[ext_resource path="res://Game/GUI/TextLeft.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/breakfastalcohol.png" type="Texture" id=5]
[ext_resource path="res://Assets/breakfasthealthy.png" type="Texture" id=6]
[ext_resource path="res://Assets/breakfastunhealthy.png" type="Texture" id=7]
[ext_resource path="res://Game/GUI/DecisionButton.tscn" type="PackedScene" id=8]

[node name="Breakfast" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="BreafastUnhealthy" type="TextureRect" parent="."]
visible = false
margin_left = 998.0
margin_top = 311.0
margin_right = 1157.0
margin_bottom = 433.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="BreakfastHealthy" type="TextureRect" parent="."]
visible = false
margin_left = 995.0
margin_top = 409.0
margin_right = 1159.0
margin_bottom = 466.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="BreakfastAlcohol" type="TextureRect" parent="."]
visible = false
margin_left = 1125.0
margin_top = 289.0
margin_right = 1173.0
margin_bottom = 422.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="TextLeft" parent="." instance=ExtResource( 4 )]

[node name="Decisions" type="GridContainer" parent="."]
visible = false
margin_left = 160.0
margin_top = 288.0
margin_right = 960.0
margin_bottom = 642.0
size_flags_horizontal = 2
custom_constants/vseparation = 60
custom_constants/hseparation = 60
columns = 2

[node name="Running" parent="Decisions" instance=ExtResource( 8 )]
anchor_right = 0.0
margin_right = 385.0
size_flags_horizontal = 3

[node name="Chill" parent="Decisions" instance=ExtResource( 8 )]
anchor_right = 0.0
margin_left = 445.0
margin_right = 830.0
size_flags_horizontal = 3
text = "Chill"

[node name="Sleep" parent="Decisions" instance=ExtResource( 8 )]
anchor_right = 0.0
margin_top = 222.0
margin_right = 385.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "Sleep"

[node name="Alcohol" parent="Decisions" instance=ExtResource( 8 )]
anchor_right = 0.0
margin_left = 445.0
margin_top = 222.0
margin_right = 830.0
margin_bottom = 384.0
size_flags_horizontal = 3
text = "Alcohol"

[connection signal="pressed" from="TextLeft/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Decisions/Running" to="." method="_on_Activity_pressed" binds= [ "Running" ]]
[connection signal="pressed" from="Decisions/Chill" to="." method="_on_Activity_pressed" binds= [ "Chill" ]]
[connection signal="pressed" from="Decisions/Sleep" to="." method="_on_Activity_pressed" binds= [ "Sleep" ]]
[connection signal="pressed" from="Decisions/Alcohol" to="." method="_on_Activity_pressed" binds= [ "Alcohol" ]]

[editable path="TextLeft"]
